src/shared/adjusters/css/adjusters.css
/*
    Font icons
*/
@font-face {
    font-family: 'C4Aicons';
    src:url('../fonts/C4Aicons.eot');
    src:url('../fonts/C4Aicons.eot?#iefix') format('embedded-opentype'),
        url('../fonts/C4Aicons.ttf') format('truetype'),
        url('../fonts/C4Aicons.woff') format('woff'),
        url('../fonts/C4Aicons.svg#C4Aicons') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'allIcons';
    src: url('../fonts/allIcons.ttf') format('truetype'),
         url('../fonts/allIcons.eot');
}

@font-face {
    font-family: 'radioButtonIcons';
    src: url('../fonts/blackDot.ttf') format('truetype'),
         url('../fonts/blackDot.eot');
}

@font-face {
    font-family: 'checkboxTick';
    src: url('../fonts/tick.ttf') format('truetype'),
         url('../fonts/tick.eot');
}

/*
    General preferences styling
*/

body {
    transform-origin: 0 0 0;
    -webkit-transform-origin: 0 0 0;
}

textarea:focus, input:focus {
    outline: 0 !important;
}

.gpii-prefsEditor-preferenceGroup {
    background:#e7f1ef;
}

.gpii-prefsEditor-category {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
    font-family: 'Open Sans', sans-serif;
}

.gpii-prefsEditor label::first-letter,
.gpii-prefsEditor h1::first-letter,
.gpii-prefsEditor h2::first-letter,
.gpii-prefsEditor h3::first-letter,
.gpii-prefsEditor h4::first-letter,
.gpii-prefsEditor h5::first-letter {
    text-transform: capitalize;
}

.gpii-uiOptions .headerTitle::first-letter {
    text-transform: lowercase;
}

h2 {
    margin-bottom: 5px;
}

h2 > label {
    padding-top: 10px;
}

/*
    Header's styling
*/
.gpii-prefsEditor-headerImage {
    -webkit-font-smoothing: antialiased;
    width: calc(100% - 2px);;
    margin: 0px !important;
    color: white;
    background-color: #566374;
    border: 1px solid #566374;
    display: table;
}

.gpii-prefsEditor-headerImage:before {
    font-size: 90px !important;
}

.gpii-prefsEditor-headerImageTick {
    font-size: 20px !important;
    float: right !important;
    margin-right: 5px;
    margin-top: -120px;
    background-color: white;
    border-radius: 50%;
    padding: 2px;
    color: #566374;
}

.gpii-prefsEditor-headerImageTick:before {
    content: "\e60a";
}

input[type=checkbox] + .gpii-prefsEditor-headerImage > .gpii-prefsEditor-headerImageTick{
    display: none;
}

input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor-headerImageTick{
    display: block;
}

.gpii-prefsEditor-increaseSizePanel > .gpii-prefsEditor-headerImage:before {
    content: "\e613";
}

.gpii-prefsEditor-contrastPanel > .gpii-prefsEditor-headerImage:before {
    content: "\e60e";
}

.gpii-prefsEditor-headerTitle {
    font-family: 'Roboto Slab', serif;
    color: white;
    font-size: 1.8em !important;
    display: table-cell;
    color: #FFFFFF;
    float: none;
    vertical-align: middle;
}

.gpii-prefsEditor-headerClickableLabel {
    margin: 0 !important;
}

input[type=checkbox], input[type=radio] {
    position: absolute;
    display: none;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

.gpii-prefsEditor-focusableRadio {
    position: absolute;
    display: inherit !important;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0; 
}

/*
    The adjusters' font icons
*/
.gpii-prefsEditor-adjusterIcons {
    float: left;
    font-family: 'C4Aicons';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

/*
    The cursor size font icons
*/
.gpii-increaseSize-iconSmallCursor:before {
    font-size: 2em !important;
    content: "\e612";
}
.gpii-increaseSize-iconBigCursor:before {
    font-size: 4em !important;
    content: "\e612";
}
.gpii-increaseSize-iconSmallCursor {
    display: table-cell;
    float: none;
    vertical-align: top !important;
    width: 1em;
}
.gpii-increaseSize-iconBigCursor {
    width: 0;
    margin-top: -1em;
}

/*
    The slider's style
*/
.gpii-prefsEditor .gpii-prefsEditor-slider-horz {
    width: calc(100% - 2em - 2px) !important;
    margin: 0.5em 0 0 !important;
}

.gpii-prefsEditor .gpii-prefsEditor-slider a {
    border: 0.65em solid #566374;
    box-shadow: none;
    width: 1.05em !important;
    height: 1.05em !important;
}

.gpii-prefsEditor .ui-slider-range {
    background-color: #17a9b8;
}

.gpii-increaseSize-cursor-size-slider-container {
    display: inline-table !important;
    width: 100% !important;
}

/*
    The textfieldStepper style
*/
.gpii-stepper {
    background-color: #FFFFFF;
    display: inline-table;
    text-align: center;
    border: 1px solid #FFFFFF;
    width: 100% !important;
    font-size: 1em !important;
}

.gpii-stepper-buttons {
    background-color: rgba(0, 0, 0, 0);
    cursor: pointer;
    display: inline-block !important;
    float: left;
    font-size: 3em !important;
    height: 1.15em;
    margin-top: -0.15em;
    position: relative;
    text-align: center !important;
    width: 10% !important;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}

.gpii-stepperMinus {
    font-size: 50px !important;
}

.gpii-stepperPlus {
    font-size: 30px !important;
    font-weight: bold;
}

.gpii-stepper-valueField {
    border: medium none !important;
    display: inline-block !important;
    float: left;
    font-size: 1.5em !important;
    text-align: right;
    vertical-align: bottom !important;
    width: 40% !important;
    padding-top: 0.3em;
}

.gpii-stepper-valueField-no-metric-unit {
    width: 80% !important;
    text-align: center;
}
/* ... */

